# NewDOM

./: .gitignore  CONTEXT.md  Cargo.toml  package.json
crates/adapters/web/: Cargo.toml
crates/adapters/web/src/: element_renderer.rs  gpu_surface.rs  lib.rs  style_packet.rs  wasm_impl.rs
crates/core/: Cargo.toml
crates/core/src/: color.rs  lib.rs  node.rs  vello_bridge.rs
crates/core/src/element/: id.rs  kind.rs  mod.rs  scene_build.rs  style.rs  taffy_bridge.rs  text.rs  tree.rs
crates/core/tests/: element_layer.rs
crates/newdom-core/: Cargo.toml
crates/newdom-core/src/: lib.rs  node.rs  vello_bridge.rs
crates/newdom-wasm/: Cargo.toml
crates/newdom-wasm/src/: wasm_impl.rs
docs/: TODO.md  hayate-spec.md  newdom-spec.md  session-notes-css-tier-and-architecture.md
docs/adr/: 0001-rust-as-core-language.md  0007-vendored-dependencies.md  0008-layout-as-optional-module.md  0009-dom-adapter-own-element-vocabulary.md  0010-browser-computed-layout-extraction.md  0011-bundle-css-engine.md  0012-platform-equal-tier.md  0013-wit-dual-layer.md  0014-platform-adapter-scope.md  0015-wit-compilation-strategy.md  0016-web-ime-editcontext-only.md  0017-ime-events-target-element-layer.md  0018-event-notification-import-callback.md  0019-interaction-state-as-event.md  0020-transform-as-group-node.md  0021-z-index-as-child-ordering.md  0022-scroll-offset-owned-by-upper-layer.md  0024-hayabusa-signal-runtime-single-wasm.md  0025-hayabusa-independent-repository.md  0027-hot-reload-template-style-immediate-script-per-language.md  0028-canvas-bundled-fonts-default-fallback.md  0029-html-mode-browser-css-layout.md  0030-element-layer-deferred-command-queue.md  0035-hayabusa-wasm-only-tsubame-separation.md  0036-tsubame-architecture.md  0037-canvas-mode-deferred-queue-removal.md  0038-tsubame-as-signal-runtime-with-adapters.md  0039-apply-mutations-encoding.md  0040-tsubame-as-renderer-target-not-signal-runtime.md  0042-cjk-font-fallback-notdef-detection.md  0043-adapter-owns-font-url-dispatch.md  0045-hayabusa-rust-framework-multilang-embedding.md
docs/archive/: hayate-spec-v1.0.md  newdom-spec-v0.1.md
examples/web-demo/: demo-03.html  demo-04.html  demo-05.html  demo-sandbox.html  index.html
scripts/: build-wasm.sh
wit/: hayate.wit
