[package]
name = "hayate-adapter-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hayate-core = { path = "../../core" }
wgpu.workspace = true
vello.workspace = true
slotmap.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "Window",
    "Navigator",
    "Gpu",
] }
anyhow.workspace = true
log.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
